# aoc2021

./: .dir-locals.el  Cargo.toml  README.md  flake.nix  shell.nix
hooks/: pre-commit
outputs/: 13_2.txt
src/: lib.rs  setup.rs
src/day_01/: mod.rs  part1.rs  part2.rs
src/day_02/: mod.rs  part1.rs  part2.rs
src/day_03/: mod.rs  part1.rs  part2.rs
src/day_04/: mod.rs  part1.rs  part2.rs
src/day_05/: mod.rs  part1.rs  part2.rs
src/day_06/: mod.rs  part1.rs  part2.rs
src/day_07/: mod.rs  part1.rs  part2.rs
src/day_08/: mod.rs  part1.rs  part2.rs
src/day_09/: mod.rs  part1.rs  part2.rs
src/day_10/: mod.rs  part1.rs  part2.rs
src/day_11/: mod.rs  part1.rs  part2.rs
src/day_12/: mod.rs  part1.rs  part2.rs
src/day_13/: mod.rs  part1.rs  part2.rs
src/day_14/: mod.rs  part1.rs  part2.rs
src/day_15/: mod.rs  part1.rs  part2.rs
src/day_16/: mod.rs  part1.rs  part2.rs
src/day_17/: mod.rs  part1.rs  part2.rs
src/day_18/: mod.rs  part1.rs  part2.rs  tree.rs
src/day_19/: mod.rs  part1.rs  part2.rs
src/day_20/: mod.rs  part1.rs  part2.rs
src/day_21/: mod.rs  part1.rs  part2.rs
src/day_22/: cuboid.rs  mod.rs  part1.rs  part2.rs  vector.rs
src/day_23/: hall.rs  mod.rs  params.rs  part1.rs  part2.rs  room.rs
