[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[dependencies]
frunk = "0.4.0"
itertools = "0.9.0"
ndarray = "0.15.4"
nom = "7.1.0"

[dev-dependencies]
paste = "1.0.6"

[[bin]]
name = "setup"
path = "src/setup.rs"

[[bin]]
name = "01_1"
path = "src/day_01/part1.rs"

[[bin]]
name = "01_2"
path = "src/day_01/part2.rs"

[[bin]]
name = "02_1"
path = "src/day_02/part1.rs"

[[bin]]
name = "02_2"
path = "src/day_02/part2.rs"

[[bin]]
name = "03_1"
path = "src/day_03/part1.rs"

[[bin]]
name = "03_2"
path = "src/day_03/part2.rs"

[[bin]]
name = "04_1"
path = "src/day_04/part1.rs"

[[bin]]
name = "04_2"
path = "src/day_04/part2.rs"

[[bin]]
name = "05_1"
path = "src/day_05/part1.rs"

[[bin]]
name = "05_2"
path = "src/day_05/part2.rs"

[[bin]]
name = "06_1"
path = "src/day_06/part1.rs"

[[bin]]
name = "06_2"
path = "src/day_06/part2.rs"

[[bin]]
name = "07_1"
path = "src/day_07/part1.rs"

[[bin]]
name = "07_2"
path = "src/day_07/part2.rs"
