[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[dependencies]
combine = "4.6.2"
counter = "0.5.2"
enumset = "1.0.8"
frunk = "0.4.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
nalgebra = "0.30.1"
ndarray = "0.15.4"
nom = "7.1.0"
num-traits = "0.2.14"
petgraph = "0.6.0"
rayon = "1.5.1"

[dev-dependencies]
paste = "1.0.6"

[[bin]]
name = "setup"
path = "src/setup.rs"

[[bin]]
name = "01_1"
path = "src/day_01/part1.rs"

[[bin]]
name = "01_2"
path = "src/day_01/part2.rs"

[[bin]]
name = "02_1"
path = "src/day_02/part1.rs"

[[bin]]
name = "02_2"
path = "src/day_02/part2.rs"

[[bin]]
name = "03_1"
path = "src/day_03/part1.rs"

[[bin]]
name = "03_2"
path = "src/day_03/part2.rs"

[[bin]]
name = "04_1"
path = "src/day_04/part1.rs"

[[bin]]
name = "04_2"
path = "src/day_04/part2.rs"

[[bin]]
name = "05_1"
path = "src/day_05/part1.rs"

[[bin]]
name = "05_2"
path = "src/day_05/part2.rs"

[[bin]]
name = "06_1"
path = "src/day_06/part1.rs"

[[bin]]
name = "06_2"
path = "src/day_06/part2.rs"

[[bin]]
name = "07_1"
path = "src/day_07/part1.rs"

[[bin]]
name = "07_2"
path = "src/day_07/part2.rs"

[[bin]]
name = "08_1"
path = "src/day_08/part1.rs"

[[bin]]
name = "08_2"
path = "src/day_08/part2.rs"

[[bin]]
name = "09_1"
path = "src/day_09/part1.rs"

[[bin]]
name = "09_2"
path = "src/day_09/part2.rs"

[[bin]]
name = "10_1"
path = "src/day_10/part1.rs"

[[bin]]
name = "10_2"
path = "src/day_10/part2.rs"

[[bin]]
name = "11_1"
path = "src/day_11/part1.rs"

[[bin]]
name = "11_2"
path = "src/day_11/part2.rs"

[[bin]]
name = "12_1"
path = "src/day_12/part1.rs"

[[bin]]
name = "12_2"
path = "src/day_12/part2.rs"

[[bin]]
name = "13_1"
path = "src/day_13/part1.rs"

[[bin]]
name = "13_2"
path = "src/day_13/part2.rs"

[[bin]]
name = "14_1"
path = "src/day_14/part1.rs"

[[bin]]
name = "14_2"
path = "src/day_14/part2.rs"

[[bin]]
name = "15_1"
path = "src/day_15/part1.rs"

[[bin]]
name = "15_2"
path = "src/day_15/part2.rs"

[[bin]]
name = "16_1"
path = "src/day_16/part1.rs"

[[bin]]
name = "16_2"
path = "src/day_16/part2.rs"

[[bin]]
name = "18_1"
path = "src/day_18/part1.rs"

[[bin]]
name = "18_2"
path = "src/day_18/part2.rs"

[[bin]]
name = "19_1"
path = "src/day_19/part1.rs"

[[bin]]
name = "19_2"
path = "src/day_19/part2.rs"
